--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-asgiref==3.2.10
-astroid==2.4.2
-beautifulsoup4==4.9.1
-colorama==0.4.3
-dj-database-url==0.5.0
-Django==3.1.12
-django-bootstrap4==2.2.0
-django-heroku==0.3.1
-gunicorn==20.0.4
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-psycopg2==2.8.5
-pylint==2.5.3
-pytz==2020.1
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.3.1
-toml==0.10.1
-whitenoise==5.1.0
-wrapt==1.12.1
+asgiref
+astroid
+beautifulsoup4
+colorama
+dj-database-url
+Django
+django-bootstrap4
+django-heroku
+gunicorn
+isort
+lazy-object-proxy
+mccabe
+psycopg2
+pylint
+pytz
+six
+soupsieve
+sqlparse
+toml
+whitenoise
+wrapt
